Returned some enaml code that dissapeared in previous commit

--- a/ipython/system/Download EC2 Results.ipynb
+++ b/ipython/system/Download EC2 Results.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -91,75 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceb5900d998b4e199ac711dd796fd110"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4d9e44ce3434bd7863569e5e3fb1943"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d16c28f1200d405488326d5cde391a3c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d86bf904f33f402091a0824dc2918879"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd8a331ffbe44b778d63641d4ec4ac70"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ea580a33d94457a4a2af75e9e5e555"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k = paramiko.RSAKey.from_private_key_file(KEY_PATH)\n",
     "c = paramiko.SSHClient()\n",
@@ -198,7 +136,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -212,40 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
-  },
-  "widgets": {
-   "state": {
-    "61ac3cc02d324f15945e05f194fa9121": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    },
-    "74b5b5797dca412f930abace6caca461": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    },
-    "85f3391a28844100ae483f44a4152f97": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    },
-    "db2d8dcaa36643a5bed09406097dae23": {
-     "views": [
-      {
-       "cell_index": 5
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
