--- a/ipython/system/NetworkCamera make movie.ipynb
+++ b/ipython/system/NetworkCamera make movie.ipynb
@@ -18,9 +18,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -59,11 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,9 +86,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -123,11 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -152,9 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -205,64 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5a8d14060b149008374cfcf8db4599b"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-6-e925991c272f>\", line 8, in <module>\n",
-      "    img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, RESOLUTION)[0][0]\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 516, in seek\n",
-      "    resolution=resolution\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 377, in send_message\n",
-      "    results.append(future.result(timeout=self.timeout))\n",
-      "  File \"C:\\Users\\User\\Anaconda2\\lib\\site-packages\\concurrent\\futures\\_base.py\", line 405, in result\n",
-      "    raise TimeoutError()\n",
-      "TimeoutError\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-6-e925991c272f>\", line 8, in <module>\n",
-      "    img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, RESOLUTION)[0][0]\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 516, in seek\n",
-      "    resolution=resolution\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 377, in send_message\n",
-      "    results.append(future.result(timeout=self.timeout))\n",
-      "  File \"C:\\Users\\User\\Anaconda2\\lib\\site-packages\\concurrent\\futures\\_base.py\", line 405, in result\n",
-      "    raise TimeoutError()\n",
-      "TimeoutError\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-6-e925991c272f>\", line 8, in <module>\n",
-      "    img = c.seek('{}'.format(CAM), ind[0], ind[1], JPEG_QUALITY, RESOLUTION)[0][0]\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 516, in seek\n",
-      "    resolution=resolution\n",
-      "  File \"c:\\users\\user\\documents\\code\\cameranetwork_git\\CameraNetwork\\client.py\", line 377, in send_message\n",
-      "    results.append(future.result(timeout=self.timeout))\n",
-      "  File \"C:\\Users\\User\\Anaconda2\\lib\\site-packages\\concurrent\\futures\\_base.py\", line 405, in result\n",
-      "    raise TimeoutError()\n",
-      "TimeoutError\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'cv2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-79fc015e56c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m video = cv2.VideoWriter(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m'video_{}_2017_{:02}_{:02}_{}.avi'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCAM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMONTH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDAY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHDR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCV_FOURCC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'6'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'4'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mVIDEO_RESOLUTION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cv2' is not defined"
      ]
     }
    ],
@@ -297,17 +238,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -321,9 +261,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
